FMS Changelog
=============

Whenever you make additions/changes to the repo, please edit this file to give a breakdown of all changes each week.
Legend:
+ New
* Changed
! Fixed

v0.3 - Week 9 6/10
Server:
+ Add Apache logging for web requests
+ Add POST /api/sensor_types - Can now add sensor types through the api
+ Add PUT /api/sensor_types/id - Can now update a sensor type through the api
+ Add lower bound and upper bound fields to sensor type
! Fixed problem where decimals were maxing out at 999.999 in the database
! Fixed problem where GET /api/buoy_instances?active=true was returning duplicate instances

iOS App:
* Support for iOS 9. Our app is now able to support devices using both 8 and 9.
+ Missing error messages for internet disconnection and loss of location information.
+ Missing error message for connection failure for buoy information
+ App now loads buoy information from the server with authorization.
* Map markers now show colour depending upon their associated group. These markers are animated and generally pretty cool.
+ Added name/email section to top of map page to show which user is logged in.
* Updated colours to be consistent with the web app.
! Issue where ungrouped markers were incorrectly coloured.
! Many small interface issues and inconsistencies.
+ Map markers now display their name, group, location and a button for more info in their callout.

Web app:
* Refactor dashboard to simplify code.
! Population of buoys list on dashboard.
! Filtering of map markers on dashboard.
* Format last login time as from now.
+ Add placeholders to Add User input fields.
+ Dashboard reacts to buoy group and instance name changes made in config page without requiring page refresh.
* Allow time range filters to accept dates without needing to specify times.
* Dashboard styling.
+ Display units next to dashboard sensor filters.
* Filter sections no longer have individual scrollbars.
+ Optimise dashboard for small screens.