@@ -13,10 +13,14 @@ package handlers
 import (
 	"encoding/json"
 	"errors"
+	"fmt"
 	"net/http"
+	"net/url"
 	"regexp"
 	"strconv"
+	"time"
 
+	"github.com/dchest/passwordreset"
 	"github.com/gorilla/mux"
 	"golang.org/x/crypto/bcrypt"
 	"stablelib.com/v1/uniuri"
@@ -216,6 +220,72 @@ func UsersUpdatePassword(env *models.Env, w http.ResponseWriter, r *http.Request
 	err = env.DB.UpdateUserPassword(user)
 	if err != nil {
 		return &AppError{err, "Error updating password in the database", http.StatusInternalServerError}
+	}
+
+	w.WriteHeader(http.StatusOK)
+	return nil
+}
+
+// POST /api/forgot_password
+// Sends an email to the email in the request body with a link to reset their password.
+// Responds with 200 OK if successful. Empty response body.
+func UsersForgotPassword(env *models.Env, w http.ResponseWriter, r *http.Request) *AppError {
+	u := new(models.User)
+	decoder := json.NewDecoder(r.Body)
+	err := decoder.Decode(&u)
+	if err != nil {
+		return &AppError{err, "Invalid JSON", http.StatusBadRequest}
+	}
+
+	if u.Email == "" {
+		return &AppError{err, "Missing email", http.StatusBadRequest}
+	}
+
+	user, err := env.DB.GetUserWithEmail(u.Email)
+	if err != nil {
+		return &AppError{err, "Error retrieving user from the database", http.StatusBadRequest}
+	}
+
+	if user == nil {
+		return &AppError{err, "No user exists with that email", http.StatusBadRequest}
+	}
+
+	// Generate one-use token to facilitate password reset
+	token := passwordreset.NewToken(user.Email, 12*time.Hour, []byte(user.Password), []byte("secret123"))
+
+	link := "http://teamneptune.co/#/reset_password?token=" + token
+
+	fmt.Println(token)
+
+	// Send email to user with link (with token) to reset password
+	err = env.DB.SendPasswordResetEmail(user, link, &env.EmailUser)
+	if err != nil {
+		return &AppError{err, "Error sending email to user", http.StatusInternalServerError}
+	}
+
+	w.WriteHeader(http.StatusOK)
+	return nil
+}
+
+// GET /api/reset_password?token=dfgsgdgfsdg
+// Returns 200 OK if the password is allowed to be changed.
+func UsersResetPassword(env *models.Env, w http.ResponseWriter, r *http.Request) *AppError {
+	u, err := url.Parse(r.URL.String())
+	params, err := url.ParseQuery(u.RawQuery)
+	if err != nil {
+		return &AppError{err, "Error parsing query parameters", http.StatusInternalServerError}
+	}
+
+	// Get token from url params
+	if params["token"] == nil {
+		return &AppError{err, "Password reset token is missing from url", http.StatusBadRequest}
+	}
+
+	token := params["token"][0]
+
+	_, err = passwordreset.VerifyToken(token, env.DB.GetPasswordHash, []byte("secret123"))
+	if err != nil {
+		return &AppError{err, "Password reset token is not valid", http.StatusForbidden}
 	}
 
 	w.WriteHeader(http.StatusOK)
